// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input checkbox renders correctly 1`] = `
<div>
  <Checkbox
    id="exampleID"
    labelText="None Provided"
    onBlur={[Function]}
    onChange={[Function]}
  />
  <div
    className="errorBox"
  />
</div>
`;

exports[`Input radio renders correctly 1`] = `
<div>
  <RadioButton
    id="exampleID"
    labelText="None Provided"
    onBlur={[Function]}
    onChange={[Function]}
    value={true}
  />
  <div
    className="errorBox"
  />
</div>
`;

exports[`Input renders correctly 1`] = `
<div>
  <TextInput
    defaultValue=""
    error={false}
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  <div
    className="errorBox"
  />
</div>
`;

exports[`Input select renders correctly when disabled is true 1`] = `
<div>
  <Select
    defaultValue=""
    disabled={true}
    error={false}
    id=""
    onBlur={[Function]}
    onChange={[Function]}
  />
  <div
    className="errorBox"
  />
</div>
`;

exports[`Input select renders correctly when type is select 1`] = `
<div>
  <Select
    defaultValue=""
    error={false}
    id=""
    onBlur={[Function]}
    onChange={[Function]}
  />
  <div
    className="errorBox"
  />
</div>
`;

exports[`Input textArea renders correctly 1`] = `
<div>
  <TextArea
    defaultValue=""
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
  />
  <div
    className="errorBox"
  />
</div>
`;

exports[`Input textArea renders correctly when disabled is true 1`] = `
<div>
  <TextArea
    defaultValue=""
    disabled={true}
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
  />
  <div
    className="errorBox"
  />
</div>
`;

exports[`Input textArea renders correctly when type is textArea 1`] = `
<div>
  <TextArea
    defaultValue=""
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
  />
  <div
    className="errorBox"
  />
</div>
`;

exports[`Input when disabled is passed in renders correctly 1`] = `
<div>
  <TextInput
    defaultValue=""
    disabled={true}
    error={false}
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  <div
    className="errorBox"
  />
</div>
`;

exports[`Input when error prop is true renders correctly 1`] = `
<div>
  <TextInput
    defaultValue=""
    error={true}
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  <div
    className="errorBox"
  />
</div>
`;

exports[`Input when idForLabel prop is passed in renders correctly 1`] = `
<div>
  <TextInput
    defaultValue=""
    error={false}
    id="exampleID"
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  <div
    className="errorBox"
  />
</div>
`;

exports[`Input when infoText prop is passed in renders correctly 1`] = `
<div>
  <TextInput
    defaultValue=""
    error={false}
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  <div
    className="errorBox"
  />
</div>
`;

exports[`Input when placeholder prop is passed in renders correctly 1`] = `
<div>
  <TextInput
    defaultValue=""
    error={false}
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Example Text"
    type="text"
  />
  <div
    className="errorBox"
  />
</div>
`;

exports[`Input when required is passed in renders correctly 1`] = `
<div>
  <TextInput
    defaultValue=""
    error={false}
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  <div
    className="errorBox"
  />
</div>
`;

exports[`Input when type is password renders correctly 1`] = `
<div>
  <TextInput
    defaultValue=""
    error={false}
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="password"
  />
  <div
    className="errorBox"
  />
</div>
`;

exports[`Input when validate is passed in renders correctly 1`] = `
<div>
  <TextInput
    defaultValue=""
    error={false}
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  <div
    className="errorBox"
  />
</div>
`;

exports[`Input when value prop is passed in renders correctly 1`] = `
<div>
  <TextInput
    defaultValue=""
    error={false}
    id=""
    inlineStyles={Object {}}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  <div
    className="errorBox"
  />
</div>
`;
